syntax = "proto3";

package blog.blog;

option go_package = "blog/x/blog/types";

message AccountsList {
  repeated string creatorList = 1;
}